[package]
name = "diffr"
version = "0.1.4"
authors = ["Nathan Moreau <nathan.moreau@m4x.org>"]
description = """
An LCS based diff highlighting tool to ease code review from your terminal.
"""
categories = ["command-line-utilities"]
edition = "2018"
homepage = "https://github.com/mookid/diffr"
repository = "https://github.com/mookid/diffr"
keywords = ["diff", "code-review", "git", "console", "cli"]
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[dependencies]
termcolor = "1.1"
atty = "0.2"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]
