[package]
name = "diffr"
version = "0.1.5"
authors = ["Nathan Moreau <nathan.moreau@m4x.org>"]
description = """
An LCS based diff highlighting tool to ease code review from your terminal.
"""
categories = ["command-line-utilities"]
edition = "2018"
homepage = "https://github.com/mookid/diffr"
repository = "https://github.com/mookid/diffr"
keywords = ["diff", "code-review", "git", "console", "cli"]
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[dependencies]
bstr = { version = "1.9.1", default-features = false, features = ["unicode"] }
termcolor = "1.1"
