[package]
name = "diffr-lib"
version = "0.1.1"
authors = ["Nathan Moreau <nathan.moreau@m4x.org>"]
description = """
An implementation of Myers diff algorithm.
"""
categories = ["algorithms"]
edition = "2018"
homepage = "https://github.com/mookid/diffr"
repository = "https://github.com/mookid/diffr"
keywords = ["diff", "LCS"]
license = "MIT"

[profile.release]
debug = true

[dependencies]

